[INJIWEB-1891] Addressed review comments and amended the readMe
Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>